syntax = "proto3";

option java_multiple_files = true;
option java_package = "rs.raf.pds.v5.z2.gRPC";

service StockExchangeService {

    rpc getStockData(StockRequest) returns (stream StockData) {}
    
    rpc updateFollowedSymbols(FollowedSymbolsRequest) returns (stream StockData) {}
    
    rpc Ask(AskRequest) returns (stream SellOffer) {}
    
    rpc Bid(BidRequest) returns (stream BuyOffer) {}
    
    rpc buy(BuyRequest) returns (BuyResponse) {}
    
    rpc sell(SellRequest) returns (SellResponse) {}
}

message StockData {
    string symbol = 1;
    string companyName = 2;
    double price = 3;
    double change = 4;
    string date = 5;
}

message StockRequest {
    int32 numberOfCompanies = 100;
}


message FollowedSymbolsRequest {
    repeated string symbols = 1;
}

message AskRequest {
    string companySymbol = 1;
    int32 numberOfOffers = 2;
}

message BidRequest {
    string companySymbol = 1;
    int32 numberOfOffers = 2;
}

message SellOffer {
    double price = 1;
    int32 quantity = 2; 
}

message BuyOffer {
    double price = 1;
    int32 quantity = 2; 
}


message BuyRequest {
    string companySymbol = 1;
    double pricePerShare = 2;
    int32 quantity = 3;
}

message BuyResponse {
    bool success = 1;
    string message = 2;
}

message SellRequest {
    string companySymbol = 1;
    double pricePerShare = 2;
    int32 quantity = 3;
}

message SellResponse {
    bool success = 1;
    string message = 2;
   
}
